--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
   <title>Trilha de CSS - DIO</title>
 </head>
 <body>
@@ -12,17 +15,23 @@
       <div class="logo">
         <img src="assets/images/logo.png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
       </div>
-      <h1>Trilha de CSS da DIO</h1>
-      <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
-      <button>Quero me inscrever</button>
+      <h1 id="h1trilha">Trilha de CSS da DIO</h1>
+      <p id="ptrilha">A nova Trilha de CSS da DIO está disponível. Acesse já
+        <br>
+       e aprenda do zero como desenvolver sites profissionais.</p>
+     <a href="https://dio.me">
+       <button id="buttontrilha" onclick="increver">Quero me inscrever</button>
+       </a>
     </div>
   </header>
   <main>
     <section id="course-content">
-      <h2>O que vou aprender?</h2>
-      <p>
+      <h2 id="h2trilha">O que vou aprender?</h2>
+      <p id="p2trilha">
         Temos 3 módulos recheados de conteúdos do básico ao avançado para que você aprenda a 
-        desenvolver sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.
+        desenvolver
+        <br>
+        sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.
       </p>
       <div class="modules-list">
         <div class="module">
@@ -37,22 +46,33 @@
       </div>
     </section>
     <section id="transform-world">
-      <p>TRANSFORME O MUNDO COM A GENTE</p>
+      <p id="p3trilha">transforme
+        <br>
+        o mundo
+        <br>
+        com a gente</p>
     </section>
     <section id="professional-challenges">
-      <h2>Evolua e encare novos desafios profissionais</h2>
+      <h2 id="h3trilha">Evolua e encare novos desafios
+        <br>
+        profissionais</h2>
       <img src="assets/images/professional-challenges.png" title="Homem lendo depoimentos em um tablet" alt="Homem lendo depoimentos em um tablet">
-      <p>
-        Junte-se ao nosso ecossistema e transforme o mundo com a gente! Todos os dias dezenas de empresas 
+      <p id="p4trilha">
+        Junte-se ao nosso ecossistema e transforme o mundo com a gente! Todos os dias dezenas de empresas
+        <br> 
         acessam a nossa plataforma em busca dos talentos mais criativos, dinâmicos e colaborativos, 
-        além do conhecimento técnico. 
-        A nossa missão é te preparar para que você conecte-se com as melhores oportunidades.
+        além do
+        <br>
+        conhecimento técnico. 
+        A nossa missão é te preparar para que você conecte-se com as melhores
+        <br>
+        oportunidades.
       </p>
     </section>
   </main>
   <footer>
     <img class="dio-logo" src="assets/images/dio-logo.png" title="Logotipo DIO com o texto make the change" alt="Logotipo DIO com o texto make the change">
-    <p>Acesse <a href="https://dio.me">dio.me</a> e se cadastre agora</p>
+    <p id="p5trilha">Acesse <a href="https://dio.me">dio.me</a> e se cadastre agora</p>
   </footer>
 </body>
 </html>
